# conformal-probes

./: pyproject.toml  sep_env_312.yaml  sep_environment.yaml
config/: analysis.yaml  sep_sweep.yaml  sep_sweep_local.yaml
notebooks/: analyze_bmrc.py  check_local_sep_runs.ipynb  paper_analysis.ipynb
scripts/: compute_semantic_entropy_local.py  run_sep_sweep.py  run_sep_sweep.sh  run_sep_sweep_local.sh  sep_setup_env.sh  submit_models.sh  train_probes.py
semantic_uncertainty/: analyze_results.py  compute_uncertainty_measures.py  generate_answers.py
semantic_uncertainty/uncertainty/data/: data_utils.py
semantic_uncertainty/uncertainty/models/: huggingface_models.py
semantic_uncertainty/uncertainty/uncertainty_measures/: semantic_entropy.py
semantic_uncertainty/uncertainty/utils/: openai.py  utils.py
