[project]
name = "conformal-probes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets==4.4.1",
    "evaluate>=0.4.6",
    "huggingface-hub==0.35.3",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]
